--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,16 @@
 body{
-    background-color: rgb(0, 0, 0);
+    background-color: black;
 }
 
-.game-container{
-    border: 1px solid red;
+
+.screen-container{
     display: flex;
     justify-content: center;
-
-    
-
 }
 
 
-.grid-choices{
-    border: 1px solid blue;
-    display: flex;
-    flex-direction: column;
-    margin: 1vw
-}
-
-.row{
-    display: flex;
-    gap:10px
-}
-
-.square{
-    width: 13vw;
-    height: 13vw;
-    border: 1px solid green;
-    text-align: center;
-
+.game-container{
+    width: 50vh;
+    height: 50vh;
+    border: 1px solid red;
 }
